--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+ <!--fix indentation-->
 <!-- Title-->
 <title>CAR Racer</title>
 <meta charset="UTF-8">
@@ -23,6 +23,7 @@
     <h1></h1>
     
   </div>
+  <!--fix indentation-->
 <div id="start-game">
 <button id="startBtn" type="button" onClick="startGame()">start new game</button>
 <p id="keytoRace" >Press p key or q key to race</p>
@@ -42,7 +43,7 @@
     </tr>
   </table>
   <p id="pChaseTrack" ></p>
- 
+  <!--fix indentation-->
  <p id="qChaseTrack" ></p>
   
  <p id="trackEsc" ></p>
